--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,43 @@
-.gradle
-**/build/
-!**/src/**/build/
+# Compiled class file
+*.class
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# Log files
+*.log
+*.log.*.gz
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
 
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
+# Temporary files
+*.tmp
 
-# Cache of project
-.gradletasknamecache
+# BlueJ files
+*.ctxt
 
-# Eclipse Gradle plugin generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Gradle
+/.gradle/
+/build/
+/*/build/
+/*/*/build/
+!/gradle/wrapper/gradle-wrapper.jar
+
+# Intellij
+.idea/**
+*.ipr
+*.iws
+
+# OSX
+.DS_Store
